--- a/app/src/main/res/layout/activity_explanation.xml
+++ b/app/src/main/res/layout/activity_explanation.xml
@@ -6,6 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/laIcon"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center_horizontal"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toTopOf="@+id/textView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
         android:id="@+id/btFetchLocations"
         android:layout_width="wrap_content"
@@ -21,7 +33,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="78dp"
+        android:layout_marginBottom="24dp"
         android:text="Texto explicativo para que el usuario solicite los permisos"
         app:layout_constraintBottom_toTopOf="@+id/btFetchLocations"
         app:layout_constraintEnd_toEndOf="parent"
